--- a/core/composer.json
+++ b/core/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "authorizenet/authorizenet": ">=1.9.3",
         "barryvdh/laravel-dompdf": "^2.0",
+        "brian2694/laravel-toastr": "^5.57",
         "coingate/coingate-php": "^3.0",
         "ezyang/htmlpurifier": "^4.13",
         "guzzlehttp/guzzle": "^7.2",
