--- a/core/composer.json
+++ b/core/composer.json
@@ -36,7 +36,12 @@
         "stripe/stripe-php": "^7.72",
         "textmagic/sdk": "dev-master",
         "twilio/sdk": "^6.23",
-        "vonage/client": "^2.4"
+        "vonage/client": "^2.4",
+        "yajra/laravel-datatables": "9.0",
+        "yajra/laravel-datatables-buttons": "^9.1",
+        "yajra/laravel-datatables-export": "^1.2",
+        "yajra/laravel-datatables-html": "^9.4",
+        "yajra/laravel-datatables-oracle": "10.3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
