--- a/core/composer.json
+++ b/core/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "arielmejiadev/larapex-charts": "^6.0",
         "authorizenet/authorizenet": ">=1.9.3",
         "barryvdh/laravel-dompdf": "^2.0",
         "blade-ui-kit/blade-ui-kit": "^0.4.0",
         "brian2694/laravel-toastr": "^5.57",
         "coingate/coingate-php": "^3.0",
+        "consoletvs/charts": "6.*",
         "ezyang/htmlpurifier": "^4.13",
         "froiden/laravel-rest-api": "^10.0",
         "google/apiclient": "^2.15",
@@ -22,6 +24,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.4",
+        "laraveldaily/laravel-charts": "*",
         "maatwebsite/excel": "^3.1",
         "mailjet/mailjet-apiv3-php": "^1.4",
         "makidizajnerica/laravel-geolocation": "^2.0",
