--- a/core/composer.json
+++ b/core/composer.json
@@ -35,6 +35,7 @@
         "razorpay/razorpay": "2.*",
         "sendgrid/sendgrid": "^7.6",
         "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/browsershot": "*",
         "spatie/laravel-permission": "^5.10",
         "stevebauman/location": "^6.6",
         "stripe/stripe-php": "^7.72",
